slightly cleaned up

--- a/views/templates.pug
+++ b/views/templates.pug
@@ -67,6 +67,10 @@
             span ./a.out
           input.d-none(type="checkbox")
         .button-checkbox
+          button.btn.btn-light.btn-sm(type="button" title="run IWYU" data-bind="runIWYU" aria-pressed="false")
+            span IWYU
+          input.d-none(type="checkbox")
+        .button-checkbox
           button.btn.btn-light.btn-sm.active.nonbinary(type="button" title="Filter unused labels from the output" data-bind="labels" aria-pressed="true")
             span .LX0:
           input.d-none(type="checkbox" checked=true)
