add IWYU as tool

--- a/views/templates.pug
+++ b/views/templates.pug
@@ -120,6 +120,9 @@
           span.hideable &nbsp;Add tool...
           | #[b.caret]
         .dropdown-menu.dropdown-menu-right
+          button.dropdown-item.btn.btn-light.btn-sm.view-iwyutool(title="include-what-you-use")
+            span.fas.fa-cog
+            | &nbsp;include-what-you-use
           button.dropdown-item.btn.btn-light.btn-sm.view-clangtidytool(title="Clang-tidy")
             span.fas.fa-cog
             | &nbsp;Clang-tidy
